Copyright (c) 2002-2005 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

  Under development

    Features added

      - Changed over Silva so it works with Zope 2.8/Zope 3 interfaces
        instead of old-style interfaces. See doc/developer_changes for
	more details.

      - Changed over Silva so it works with the Zope 3 translation
        architecture, using Five. See doc/developer_changes for more
        details.

      - Some parts of the Silva UI are now based on Zope 3 adapters
        and views, using Five. This is a first step of a long
        evolutionary transition for the Silva UI.

    Bugs fixed

      - Added missing 'is_default' method on SilvaObject, it was already
        available on Content but some new functionality (closing objects
        from tab_edit of Container types) made that it was required for
        other types as well.

  1.4

    Features added

      - Added a JavaScript registry for onload handlers and used that to
        do some refactoring of the tab_edit pagetemplates.

      - Added support for Kupu 1.3.

      - Added a field to the silva-extra metadata-set: hide_from_toc. 
        By default set to do not hide, when this is set to hide on a piece
        of content, that content (and what it contains) will not show up in
        tables of content.

      - Added a link_type attribute to Link (Version) objects. Adding 
        relative links is now possible.

      - Browsing to objects (for e.g. link and image lookups) has been 
        refactored, now there's only a single implementation of the lookup
        window, and somewhat cleaner HTML.

      - It is now possible to have table cells without a width attribute,
        which means you can style your tables through css entirely. To use
        this feature, give the column widths a value of '*'.

    Bugs Fixed

      - Un-fixed a Zope-2.7.7 compatibility issue with using ZCTextIndex.